--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Não importa se você é um iniciante ou um veterano, aqui você encontrará uma comunidade acolhedora e ativa pronta para ajudá-lo a melhorar suas habilidades e se divertir!</p>
     </div>
     <div class="container button-container">
-        <a href="cadrasto.html" target="_blank">
+        <a href="https://discord.gg/XQZ9Ukw9" target="_blank">
             <button>Entrar no servidor</button>
         </a>
     </div>
