--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
         h1 {
             color: #ff4655;
             text-align: center;
-            margin: 20px 0;
+            margin: 20px 0 10px;
             font-size: 2.5em;
+        }
+        .logo {
+            display: block;
+            margin: 0 auto 20px;
+            max-width: 150px;
+            border-radius: 10px;
         }
         .container {
             max-width: 800px;
@@ -47,24 +53,6 @@
         button:hover {
             background-color: #e03e4e;
         }
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        input, textarea {
-            padding: 10px;
-            border: 1px solid #444;
-            border-radius: 5px;
-            background-color: #2c2c3e;
-            color: #f5f5f5;
-            font-size: 1em;
-        }
-        input:focus, textarea:focus {
-            outline: none;
-            border-color: #ff4655;
-        }
         hr {
             border: 0;
             height: 1px;
@@ -79,6 +67,8 @@
 </head>
 <body>
     <h1>Servidor de Valorant</h1>
+    <img src=""C:\Users\malag\Downloads\logo_valorant.png.png"" class="logo">
+   
     <div class="container">
         <p><strong>Bem-vindo ao servidor de Valorant!</strong> Aqui você pode encontrar informações, dicas e se conectar com outros jogadores.</p>
         <hr>
@@ -95,7 +85,6 @@
     <div class="container button-container">
         <a href="index_suport.html" target="_blank">
             <button>Suporte</button>
-      
         </a>
     </div>
 </body>
